--- a/style/dialog.less
+++ b/style/dialog.less
@@ -14,3 +14,11 @@
     background-color: rgba(0, 0, 0, .4);
     z-index: 9;
 }
+.uxcore-dialog-header {
+    position: relative;
+    .uxcore-dialog-close {
+        position: absolute;
+        right: 5px;
+        top: 0px;
+    }
+}
