upgrade to more easy dialog

--- a/src/dialog/Mask.less
+++ b/src/dialog/Mask.less
@@ -12,42 +12,15 @@
     right: 0;
     left: 0;
     bottom: 0;
-    background-color: #373737;
-    background-color: rgba(55, 55, 55, 0.6);
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.8);
     height: 100%;
     z-index: 1000;
-    filter: alpha(opacity=50);
+    filter: alpha(opacity=80);
   }
 
   &-wrap-hidden > &-mask&-fade-enter,
   &-wrap-hidden > &-mask&-fade-leave {
     display: block;
-  }
-
-  .fade-effect() {
-    animation-duration: 0.3s;
-    animation-fill-mode: both;
-    animation-timing-function: ease-in;
-  }
-
-  &-fade-enter {
-    opacity: 0;
-    .fade-effect();
-    animation-play-state: paused;
-  }
-
-  &-fade-leave {
-    .fade-effect();
-    animation-play-state: paused;
-  }
-
-  &-fade-enter&-fade-enter-active {
-    animation-name: fadeIn;
-    animation-play-state: running;
-  }
-
-  &-fade-leave&-fade-leave-active {
-    animation-name: fadeOut;
-    animation-play-state: running;
   }
 }
