--- a/src/Dialog.css
+++ b/src/Dialog.css
@@ -30,71 +30,59 @@
 .kuma-dialog-title {
   margin: 0;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 38px;
   font-weight: bold;
+  color: #333;
 }
 .kuma-dialog-content {
   position: relative;
   background-color: #fff;
-  border: none;
-  border-radius: 6px 6px;
-  background-clip: padding-box;
+  border: 1px solid #ccc;
+  box-shadow: 0 1px 8px #ced1d2;
   outline: 0;
 }
 .kuma-dialog-close {
+  position: absolute;
+  right: 10px;
+  top: 6px;
+  font-size: 20px;
   cursor: pointer;
   outline: none;
-  margin-top: -2px;
-  float: right;
-  font-size: 21px;
-  font-weight: 700;
-  line-height: 1;
-  color: #000;
-  text-shadow: 0 1px 0 #fff;
-  text-decoration: none;
-  transition: color .3s ease;
   color: #999;
 }
-.kuma-dialog-close-x {
-  position: absolute;
-  display: inline-block;
-  font-style: normal;
-  vertical-align: baseline;
-  text-align: center;
-  text-transform: none;
-  text-rendering: auto;
-  width: 12px;
-  height: 12px;
-  font-size: 14px;
-  line-height: 12px;
-  top: 18px;
-  right: 18px;
-}
-.kuma-dialog-close-x:before {
-  content: "x";
-  display: block;
-}
 .kuma-dialog-close:hover {
-  color: #444;
-  text-decoration: none;
+  color: #666;
+  text-shadow: 0 0 2px #aaa;
+}
+.kuma-dialog-close-x {
+  font-family: kuma!important;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: .2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+.kuma-dialog-close-x:after {
+  content: '';
 }
 .kuma-dialog-header {
-  padding: 13px 20px 14px 20px;
-  border-radius: 5px 5px 0 0;
-  background: #fff;
-  color: #666;
-  border-bottom: 1px solid #e9e9e9;
+  margin: 0 10px;
+  padding: 10px 0 0;
+  height: 48px;
+  background: url('https://aliwork.alicdn.com/tps/i3/TB1dfjZGVXXXXb3XpXX8.CvJFXX-3-1.png') repeat-x bottom;
+  text-indent: 1.2em;
 }
 .kuma-dialog-body {
-  padding: 8px 20px;
+  padding: 16px;
   font-size: 12px;
   line-height: 1.5;
 }
 .kuma-dialog-footer {
-  border-top: 1px solid #e9e9e9;
-  padding: 8px 20px 16px 10px;
+  padding: 10px 18px 10px 10px;
   text-align: right;
-  border-radius: 0 0 5px 5px;
+}
+.kuma-dialog-footer button + button {
+  margin-left: 8px;
+  margin-bottom: 0;
 }
 .kuma-dialog-wrap-hidden > .kuma-dialog-mask {
   display: none;
@@ -105,47 +93,46 @@
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: #373737;
-  background-color: rgba(55, 55, 55, 0.6);
+  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   height: 100%;
   z-index: 1000;
-  filter: alpha(opacity=50);
+  filter: alpha(opacity=80);
 }
 .kuma-dialog-wrap-hidden > .kuma-dialog-mask.kuma-dialog-fade-enter,
 .kuma-dialog-wrap-hidden > .kuma-dialog-mask.kuma-dialog-fade-leave {
   display: block;
 }
-.kuma-dialog-fade-enter {
-  opacity: 0;
-  animation-duration: 0.3s;
-  animation-fill-mode: both;
-  animation-timing-function: ease-in;
-  animation-play-state: paused;
+.kuma-confirm-body {
+  padding: 0 10px;
 }
-.kuma-dialog-fade-leave {
-  animation-duration: 0.3s;
-  animation-fill-mode: both;
-  animation-timing-function: ease-in;
-  animation-play-state: paused;
+.kuma-confirm-body > .kuma-icon {
+  font-size: 24px;
 }
-.kuma-dialog-fade-enter.kuma-dialog-fade-enter-active {
-  animation-name: fadeIn;
-  animation-play-state: running;
+.kuma-confirm-body > .kuma-icon.kuma-icon-caution {
+  color: #ff9419;
 }
-.kuma-dialog-fade-leave.kuma-dialog-fade-leave-active {
-  animation-name: fadeOut;
-  animation-play-state: running;
+.kuma-confirm-body > .kuma-icon.kuma-icon-information {
+  color: #48c5ff;
 }
-.kuma-dialog-header {
-  padding: 13px 18px 14px 16px;
+.kuma-confirm-body > .kuma-icon.kuma-icon-success {
+  color: #88d05c;
 }
-.kuma-dialog-body {
-  padding: 16px;
+.kuma-confirm-body > .kuma-icon.kuma-icon-error {
+  color: #e96553;
 }
-.kuma-dialog-footer {
-  padding: 10px 18px 10px 10px;
+.kuma-confirm-title {
+  margin-left: 10px;
+  font-size: 14px;
 }
-.kuma-dialog-footer button + button {
+.kuma-confirm-content {
+  margin-left: 34px;
+  margin-bottom: 15px;
+}
+.kuma-confirm-action {
+  margin-left: 44px;
+}
+.kuma-confirm-action button + button {
   margin-left: 8px;
   margin-bottom: 0;
 }
