--- a/src/Dialog.less
+++ b/src/Dialog.less
@@ -12,19 +12,4 @@
 
 @import "./dialog/Dialog.less";
 @import "./dialog/Mask.less";
-
-.@{dialog-prefix-cls} {
-  &-header {
-    padding: 13px 18px 14px 16px;
-  }
-  &-body {
-    padding: 16px;
-  }
-  &-footer {
-    padding: 10px 18px 10px 10px;
-  }
-  &-footer button + button {
-    margin-left: 8px;
-    margin-bottom: 0;
-  }
-}
+@import "./dialog/Confirm.less";
