--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -19,78 +19,65 @@
   &-title {
     margin: 0;
     font-size: 14px;
-    line-height: 21px;
+    line-height: 38px;
     font-weight: bold;
+    color: #333;
   }
 
   &-content {
     position: relative;
     background-color: #fff;
-    border: none;
-    border-radius: 6px 6px;
-    background-clip: padding-box;
+    border: 1px solid #ccc;
+    box-shadow: 0 1px 8px #ced1d2;
     outline: 0;
   }
 
   &-close {
+    position: absolute;
+    right: 10px;
+    top: 6px;
+    font-size: 20px;
     cursor: pointer;
     outline: none;
-    margin-top: -2px;
-    float: right;
-    font-size: 21px;
-    font-weight: 700;
-    line-height: 1;
-    color: #000;
-    text-shadow: 0 1px 0 #fff;
-    text-decoration: none;
-    transition: color .3s ease;
     color: #999;
 
-    &-x {
-      position: absolute;
-      display: inline-block;
-      font-style: normal;
-      vertical-align: baseline;
-      text-align: center;
-      text-transform: none;
-      text-rendering: auto;
-      width: 12px;
-      height: 12px;
-      font-size: 14px;
-      line-height: 12px;
-      top: 18px;
-      right: 18px;
-
-      &:before {
-        content: "x";
-        display: block;
-      }
+    &:hover {
+        color: #666;
+        text-shadow: 0 0 2px #aaa;
     }
 
-    &:hover {
-      color: #444;
-      text-decoration: none;
+    &-x {
+        font-family: kuma!important;
+        font-style: normal;
+        -webkit-font-smoothing: antialiased;
+        -webkit-text-stroke-width: .2px;
+        -moz-osx-font-smoothing: grayscale;
+        &:after {
+            content: '';
+        }
     }
   }
 
   &-header {
-    padding: 13px 20px 14px 20px;
-    border-radius: 5px 5px 0 0;
-    background: #fff;
-    color: #666;
-    border-bottom: 1px solid #e9e9e9;
+    margin: 0 10px;
+    padding: 10px 0 0;
+    height: 48px;
+    background: url('https://aliwork.alicdn.com/tps/i3/TB1dfjZGVXXXXb3XpXX8.CvJFXX-3-1.png') repeat-x bottom;
+    text-indent: 1.2em;
   }
 
   &-body {
-    padding: 8px 20px;
+    padding: 16px;
     font-size: 12px;
     line-height: 1.5;
   }
 
   &-footer {
-    border-top: 1px solid #e9e9e9;
-    padding: 8px 20px 16px 10px;
+    padding: 10px 18px 10px 10px;
     text-align: right;
-    border-radius: 0 0 5px 5px;
+    button + button {
+        margin-left: 8px;
+        margin-bottom: 0;
+    }
   }
 }
