--- a/src/dialog/Mask.css
+++ b/src/dialog/Mask.css
@@ -7,36 +7,15 @@
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: #373737;
-  background-color: rgba(55, 55, 55, 0.6);
+  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   height: 100%;
   z-index: 1000;
-  filter: alpha(opacity=50);
+  filter: alpha(opacity=80);
 }
 .kuma-dialog-wrap-hidden > .kuma-dialog-mask.kuma-dialog-fade-enter,
 .kuma-dialog-wrap-hidden > .kuma-dialog-mask.kuma-dialog-fade-leave {
   display: block;
-}
-.kuma-dialog-fade-enter {
-  opacity: 0;
-  animation-duration: 0.3s;
-  animation-fill-mode: both;
-  animation-timing-function: ease-in;
-  animation-play-state: paused;
-}
-.kuma-dialog-fade-leave {
-  animation-duration: 0.3s;
-  animation-fill-mode: both;
-  animation-timing-function: ease-in;
-  animation-play-state: paused;
-}
-.kuma-dialog-fade-enter.kuma-dialog-fade-enter-active {
-  animation-name: fadeIn;
-  animation-play-state: running;
-}
-.kuma-dialog-fade-leave.kuma-dialog-fade-leave-active {
-  animation-name: fadeOut;
-  animation-play-state: running;
 }
 
 /*# sourceMappingURL=../dialog/Mask.css.map */
