--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -1,3 +1,4 @@
+@import "../../node_modules/uxcore-kuma/src/variables";
 @dialog-prefix-cls: kuma-dialog;
 
 .@{dialog-prefix-cls} {
@@ -6,11 +7,6 @@
   left: -9999px;
   top: -9999px;
   z-index: 1000;
-
-  &-wrap * {
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  }
 
   &-wrap-hidden > & {
     display: none;
@@ -21,14 +17,14 @@
     font-size: 14px;
     line-height: 34px;
     font-weight: bold;
-    color: #333;
+    color: @black;
     text-indent: 20px;
   }
 
   &-content {
     position: relative;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    background-color: @white;
+    border: 1px solid @gray-dark;
     box-shadow: 0 1px 8px #ced1d2;
     outline: 0;
   }
@@ -40,10 +36,10 @@
     font-size: 16px;
     cursor: pointer;
     outline: none;
-    color: #c2c2c2;
+    color: @gray-dark;
 
     &:hover {
-        color: #666;
+        color: @black;
         text-shadow: 0 0 2px #aaa;
     }
 
