--- a/src/Dialog.css
+++ b/src/Dialog.css
@@ -5,24 +5,12 @@
  * Copyright 2014-2015, Uxcore Team, Alinw.
  * All rights reserved.
  */
-/*@pager-bg:                             @pagination-bg;
-@pager-border:                         @pagination-border;
-@pager-border-radius:                  15px;
-
-@pager-hover-bg:                       @pagination-hover-bg;
-
-@pager-active-bg:                      @pagination-active-bg;
-@pager-active-color:                   @pagination-active-color;*/
 .kuma-dialog {
   outline: none;
   position: absolute;
   left: -9999px;
   top: -9999px;
   z-index: 1000;
-}
-.kuma-dialog-wrap * {
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .kuma-dialog-wrap-hidden > .kuma-dialog {
   display: none;
@@ -32,13 +20,13 @@
   font-size: 14px;
   line-height: 34px;
   font-weight: bold;
-  color: #333;
+  color: #666666;
   text-indent: 20px;
 }
 .kuma-dialog-content {
   position: relative;
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
   box-shadow: 0 1px 8px #ced1d2;
   outline: 0;
 }
@@ -49,10 +37,10 @@
   font-size: 16px;
   cursor: pointer;
   outline: none;
-  color: #c2c2c2;
+  color: #cccccc;
 }
 .kuma-dialog-close:hover {
-  color: #666;
+  color: #666666;
   text-shadow: 0 0 2px #aaa;
 }
 .kuma-dialog-close-x {
@@ -109,16 +97,16 @@
   font-size: 24px;
 }
 .kuma-confirm-body > .kuma-icon.kuma-icon-caution {
-  color: #ff9419;
+  color: #ff974d;
 }
 .kuma-confirm-body > .kuma-icon.kuma-icon-information {
-  color: #48c5ff;
+  color: #ff9900;
 }
 .kuma-confirm-body > .kuma-icon.kuma-icon-success {
-  color: #88d05c;
+  color: #95ed5e;
 }
 .kuma-confirm-body > .kuma-icon.kuma-icon-error {
-  color: #e96553;
+  color: #ed6f5e;
 }
 .kuma-confirm-title {
   margin-left: 10px;
