--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -1,5 +1,5 @@
 @import "../../node_modules/uxcore-kuma/src/variables";
-@dialog-prefix-cls: kuma-dialog;
+@dialog-prefix-cls: kuma-dlg;
 
 .@{dialog-prefix-cls} {
   outline: none;
