--- a/src/Dialog.less
+++ b/src/Dialog.less
@@ -8,7 +8,7 @@
 
 @import "../node_modules/uxcore-kuma/src/variables";
 
-@dialog-prefix-cls: kuma-dialog;
+@dialog-prefix-cls: kuma-dlg;
 
 @import "./dialog/Dialog.less";
 @import "./dialog/Mask.less";
