--- a/src/dialog/Mask.less
+++ b/src/dialog/Mask.less
@@ -17,6 +17,9 @@
     height: 100%;
     z-index: 1000;
     filter: alpha(opacity=80);
+    &-hidden {
+        display: none;
+    }
   }
 
   &-wrap-hidden > &-mask&-fade-enter,
