--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -1,44 +1,45 @@
 @dialog-prefix-cls: kuma-dlg;
 
 .@{dialog-prefix-cls} {
-  outline: none;
-  position: absolute;
-  left: -9999px;
-  top: -9999px;
-  z-index: 1000;
-
-  &-hidden, &-wrap-hidden > & {
-    display: none;
-  }
-
-  &-title {
-    margin: 0;
-    font-size: 14px;
-    line-height: 34px;
-    font-weight: bold;
-    color: @black;
-    text-indent: 20px;
-  }
-
-  &-content {
-    position: relative;
-    background-color: @white;
-    border: 1px solid @gray-dark;
-    box-shadow: 0 1px 8px #ced1d2;
-    outline: 0;
-  }
-
-  &-close {
-    position: absolute;
-    right: 15px;
-    top: 6px;
-    font-size: 16px;
-    cursor: pointer;
     outline: none;
-    color: @gray-dark;
+    position: absolute;
+    left: -9999px;
+    top: -9999px;
+    z-index: 1000;
+
+    &-hidden, &-wrap-hidden > & {
+        display: none;
+    }
+
+    &-title {
+        margin: 0;
+        font-size: 14px;
+        line-height: 40px;
+        color: @basic-100;
+        text-indent: 20px;
+    }
+
+    &-content {
+        position: relative;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        box-shadow: 0 1px 8px #ced1d2;
+        outline: 0;
+        border-radius: 3px;
+        overflow: hidden;
+    }
+
+    &-close {
+        position: absolute;
+        right: 20px;
+        top: 6px;
+        font-size: 16px;
+        cursor: pointer;
+        outline: none;
+        color: @basic-100;
 
     &:hover {
-        color: @black;
+        color: #333;
         text-shadow: 0 0 2px #aaa;
     }
 
@@ -52,23 +53,23 @@
             content: '';
         }
     }
-  }
+}
 
   &-header {
-    margin: 0 10px;
-    padding: 10px 0 0;
-    height: 44px;
-    background: url('https://aliwork.alicdn.com/tps/i3/TB1dfjZGVXXXXb3XpXX8.CvJFXX-3-1.png') repeat-x bottom;
+    height: 40px;
+    background-color: @brand-primary;
   }
 
   &-body {
-    padding: 15px 30px;
+    padding: 15px 20px;
     font-size: 12px;
     line-height: 1.5;
   }
 
   &-footer {
-    padding: 0 30px 30px;
+    padding: 12px 0;
+    background-color: @basic-300;
+    text-align: center;
     button + button {
         margin-left: 8px;
         margin-bottom: 0;
