apply new style

--- a/src/Dialog.less
+++ b/src/Dialog.less
@@ -6,7 +6,7 @@
  * All rights reserved.
  */
 
-@dialog-prefix-cls: kuma-dlg;
+@__dialog-prefix-cls: kuma-dlg;
 
 @import "./dialog/Dialog.less";
 @import "./dialog/Mask.less";
