change var name with kuma-base

--- a/src/dialog/Confirm.less
+++ b/src/dialog/Confirm.less
@@ -27,12 +27,12 @@
             display: inline-block;
             vertical-align: middle;
             font-size: 14px;
-            color: @primary-text-color;
+            color: @text-primary-color;
         }
         .@{__confirm-prefix-cls}-content {
             margin-left: 36px;
             font-size: 12px;
-            color: @seconary-text-color;
+            color: @text-seconary-color;
         }
         .@{__confirm-prefix-cls}-action {
             padding: 12px 0;
