--- a/src/dialog/Confirm.less
+++ b/src/dialog/Confirm.less
@@ -32,7 +32,7 @@
         .@{__confirm-prefix-cls}-content {
             margin-left: 36px;
             font-size: 12px;
-            color: @text-seconary-color;
+            color: @text-secondary-color;
         }
         .@{__confirm-prefix-cls}-action {
             padding: 12px 0;
