--- a/src/dialog/Confirm.less
+++ b/src/dialog/Confirm.less
@@ -4,6 +4,7 @@
         padding: 0;
         .@{__confirm-prefix-cls}-body {
             padding: 20px;
+            white-space: nowrap;
             > .kuma-icon {
                 display: inline-block;
                 vertical-align: middle;
@@ -28,6 +29,8 @@
             vertical-align: middle;
             font-size: 14px;
             color: @text-primary-color;
+            max-width: 220px;
+            white-space: pre-wrap;
         }
         .@{__confirm-prefix-cls}-content {
             margin-left: 36px;
