--- a/src/dialog/Confirm.less
+++ b/src/dialog/Confirm.less
@@ -31,12 +31,14 @@
             color: @text-primary-color;
             max-width: 220px;
             white-space: pre-wrap;
+            word-wrap: break-word;
         }
         .@{__confirm-prefix-cls}-content {
             margin-left: 36px;
             font-size: 12px;
             color: @text-secondary-color;
             white-space: pre-wrap;
+            word-wrap: break-word;
         }
         .@{__confirm-prefix-cls}-action {
             padding: 12px 0;
