--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -11,7 +11,7 @@
     -webkit-overflow-scrolling: touch;
     outline: 0 none;
 
-    &.vertical-center-dailog {
+    &.vertical-center-dialog {
         display: flex;
         align-items: center;
         justify-content: center;
