--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -109,7 +109,7 @@
 @keyframes dialogSlideInDown {
     0% {
         opacity: 0;
-        transform: translateY(20%);
+        transform: translateY(30px);
     }
     100% {
         opacity: 1;
@@ -124,7 +124,7 @@
     }
     100% {
         opacity: 0;
-        transform: translateY(20%);
+        transform: translateY(30px);
     }
 }
 
@@ -171,7 +171,7 @@
 .dialogSlideDown-enter,
 .dialogSlideDown-appear {
     opacity: 0;
-    transform: translateY(20%);
+    transform: translateY(30px);
     animation-timing-function: ease-out;
     animation-duration: .3s;
 }
