--- a/demo/DialogDemo.less
+++ b/demo/DialogDemo.less
@@ -13,4 +13,5 @@
 }
 @import '../node_modules/kuma-base/theme/blue.less';
 @import '../node_modules/kuma-base/core.less';
+@import '../node_modules/uxcore-kuma/dist/blue.css';
 @import '../src/Dialog.less';
