--- a/src/dialog/Confirm.less
+++ b/src/dialog/Confirm.less
@@ -5,31 +5,36 @@
     .@{__confirm-prefix-cls}-body {
       padding: 24px 16px 20px 24px;
       white-space: nowrap;
-      >.kuma-icon {
+      >.kuma-icon,
+      >.uxcore-icon {
         display: inline-block;
         vertical-align: top;
-        font-size: 40px;
-        line-height: 40px;
-        &.kuma-icon-caution {
+        font-size: 26px;
+        line-height: 26px;
+        &.kuma-icon-caution,
+        &.uxicon-jinggao-full {
           color: @brand-warning;
         }
-        &.kuma-icon-information {
+        &.kuma-icon-information,
+        &.uxicon-tishi-full {
           color: @brand-info;
         }
-        &.kuma-icon-success {
+        &.kuma-icon-success,
+        &.uxicon-chenggong-full {
           color: @brand-success;
         }
-        &.kuma-icon-error {
+        &.kuma-icon-error,
+        &.uxicon-biaodanlei-tongyongqingchu {
           color: @brand-danger;
         }
       }
     }
     .@{__confirm-prefix-cls}-title {
-      margin: 0 0 16px 16px;
+      margin: 0 0 4px 12px;
       display: inline-block;
       vertical-align: middle;
       font-size: 16px;
-      line-height: 16px;
+      line-height: 26px;
       color: @text-primary-color;
       max-width: 220px;
       white-space: pre-wrap;
@@ -40,7 +45,7 @@
       max-width: 240px;
     }
     .@{__confirm-prefix-cls}-content {
-      margin-left: 16px;
+      margin-left: 12px;
       font-size: 12px;
       color: @text-secondary-color;
       white-space: pre-wrap;
