--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -96,6 +96,7 @@
     &-footer {
         padding: 16px 16px 16px 24px;
         text-align: right;
+        border-top: 1px solid @split-line-color;
         button + button {
             margin-left: 8px;
             margin-bottom: 0;
