--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -62,14 +62,15 @@
         }
 
         &-x {
-            font-family: kuma!important;
+            font-family: uxcore!important;
             font-style: normal;
             -webkit-font-smoothing: antialiased;
             -webkit-text-stroke-width: .2px;
             -moz-osx-font-smoothing: grayscale;
             color: @normal-alpha-4;
+            font-size: 12px;
             &:after {
-                content: '';
+                content: "\e6b0";
             }
         }
     }
