--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -31,7 +31,8 @@
 .@{__dialog-prefix-cls} {
 
     &-title {
-        margin: 20px 0px 10px;
+        margin: 0;
+        padding: 20px 0px 10px;
         font-size: 16px;
         color: @text-primary-color;
         text-indent: 24px;
