--- a/src/dialog/Confirm.less
+++ b/src/dialog/Confirm.less
@@ -35,7 +35,7 @@
       vertical-align: middle;
       font-size: 16px;
       line-height: 26px;
-      color: @text-primary-color;
+      color: @dark-alpha-2;
       max-width: 220px;
       white-space: pre-wrap;
       word-wrap: break-word;
