--- a/src/dialog/Dialog.less
+++ b/src/dialog/Dialog.less
@@ -33,7 +33,7 @@
     &-title {
         padding: 20px 0px 10px;
         font-size: 16px;
-        color: @text-primary-color;
+        color: @dark-alpha-2;
         text-indent: 24px;
     }
 
@@ -89,7 +89,7 @@
     }
 
     &-body {
-        padding: 16px 24px 40px;
+        padding: 16px 24px 32px;
         font-size: 12px;
         line-height: 1.5;
     }
