--- a/src/dialog/Mask.less
+++ b/src/dialog/Mask.less
@@ -1,6 +1,6 @@
-@__dialog-prefix-cls: kuma-dlg;
+@__dialogPrefixCls: kuma-dlg;
 
-.@{__dialog-prefix-cls} {
+.@{__dialogPrefixCls} {
 
   &-wrap-hidden > &-mask {
     display: none;
