--- a/src/Dialog.less
+++ b/src/Dialog.less
@@ -6,7 +6,8 @@
  * All rights reserved.
  */
 
-@_dialogPrefixCls: kuma-dlg;
+@__dialogPrefixCls: kuma-dlg;
+@__confirmPrefixCls: kuma-confirm;
 
 @import "./dialog/Dialog.less";
 @import "./dialog/Mask.less";
