--- a/src/dialog/Confirm.less
+++ b/src/dialog/Confirm.less
@@ -1,8 +1,7 @@
-@_confirmPrefixCls: kuma-confirm;
-.@{_dialogPrefixCls}-confirm {
-  .@{_dialogPrefixCls}-body {
+.@{__dialogPrefixCls}-confirm {
+  .@{__dialogPrefixCls}-body {
     padding: 0;
-    .@{_confirmPrefixCls}-body {
+    .@{__confirmPrefixCls}-body {
       padding: 24px 16px 20px 24px;
       white-space: nowrap;
       >.kuma-icon,
@@ -29,7 +28,7 @@
         }
       }
     }
-    .@{_confirmPrefixCls}-title {
+    .@{__confirmPrefixCls}-title {
       margin: 0 0 4px 12px;
       display: inline-block;
       vertical-align: middle;
@@ -40,18 +39,18 @@
       white-space: pre-wrap;
       word-wrap: break-word;
     }
-    .@{_confirmPrefixCls}-body-main {
+    .@{__confirmPrefixCls}-body-main {
       display: inline-block;
       max-width: 240px;
     }
-    .@{_confirmPrefixCls}-content {
+    .@{__confirmPrefixCls}-content {
       margin-left: 12px;
       font-size: 12px;
       color: @text-secondary-color;
       white-space: pre-wrap;
       word-wrap: break-word;
     }
-    .@{_confirmPrefixCls}-action {
+    .@{__confirmPrefixCls}-action {
       padding: 12px 16px 16px 24px;
       text-align: right;
       button+button {
